--- a/style.css
+++ b/style.css
@@ -18,14 +18,31 @@ form{
     margin: auto;
     max-width: 100%;
     width: 400px;
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.1); 
+    box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.1);
 }
 
 .input{
     padding: 1rem 2rem;
     display: block;
     width: 100%;
+    border: none;
 }
 
 .input::placeholder{
     color: #b5b5b5;
 }
+
+.todos{
+    background-color: #fff;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.todos li{
+    padding: 1rem 2rem;
+    border-top: 1px solid #eee;
+    cursor: pointer;
+}
+
