--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
 }
 
 body{
+    display: flex;
+
+    align-items: center;
+    flex-direction: column;
     background-color: #f5f5f5;
     margin: 0;
+    min-height: 100vh;
 }
 
 h1{
@@ -15,7 +20,6 @@ h1{
 }
 
 form{
-    margin: auto;
     max-width: 100%;
     width: 400px;
     -webkit-box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.1); 
@@ -46,3 +50,12 @@ form{
     cursor: pointer;
 }
 
+.todos li.completed{
+    color: #b6b6b6;
+    text-decoration: line-through;
+}
+
+small{
+    margin-top: 2rem;
+    color: #b5b5b5;
+}
